# pyram_legacy

./: .gitignore  CMakeLists.txt  DockerfileBuildEnv  README.md
.github/workflows/: book.yml
docs/: _config.yml  _toc.yml  intro.md  quickstart.md
src/: CMakeLists.txt
src/ign/: CMakeLists.txt
src/ign/core/: CMakeLists.txt
src/ign/core/include/: ignAssertion.h  ignCommon.h  ignConfig.h  ignConvertUTF.h  ignException.h  ignFilesystemSysInfo.h  ignFilesystemUtils.h  ignInputStreamReader.h  ignInstanceCounter.h  ignLog.h  ignRuntime.h  ignStringTools.h  ignUniqueVector.h
src/ign/core/src/: ignAssertion.cpp  ignConvertUTF.cpp  ignFilesystemSysInfo.cpp  ignFilesystemUtils.cpp  ignLog.cpp  ignRuntime.cpp  ignStringTools.cpp
src/ign/data/: CMakeLists.txt
src/ign/data/include/: ignDataAll.h  ignDataArray.h  ignDataBoolean.h  ignDataDouble.h  ignDataFloat.h  ignDataHelper.h  ignDataInteger.h  ignDataJsonLexer.h  ignDataJsonReader.h  ignDataLong.h  ignDataNameValuePair.h  ignDataNull.h  ignDataObject.h  ignDataString.h  ignDataValue.h  ignDataVariant.h
src/ign/data/src/: ignDataArray.cpp  ignDataBoolean.cpp  ignDataDouble.cpp  ignDataFloat.cpp  ignDataHelper.cpp  ignDataInteger.cpp  ignDataJsonLexer.cpp  ignDataJsonReader.cpp  ignDataLong.cpp  ignDataNameValuePair.cpp  ignDataNull.cpp  ignDataObject.cpp  ignDataString.cpp  ignDataValue.cpp  ignDataVariant.cpp
src/ign/image/: CMakeLists.txt
src/ign/image/include/: ignBufferImage.h  ignBufferImage_code.h  ignColorTable.h  ignGDALImageDriver.h  ignImage.h  ignImageAggChannels.h  ignImageCache.h  ignImageComposeChannelsOp.h  ignImageDeriche.h  ignImageDeriche_code.h  ignImageDriver.h  ignImageDriverManager.h  ignImageEntropy.h  ignImageIO.h  ignImageInput.h  ignImageModBord.h  ignImageModBord_code.h  ignImageNumRegion.h  ignImageNumRegion_code.h  ignImageOutput.h  ignImageRadioTransform.h  ignImageSampling.h  ignImageSampling_code.h  ignImageSystemRadio.h  ignImageType.h  ignImageWatershed.h  ignMPDImageDriver.h  ignMultiImage.h  ignProjectionList.h
src/ign/image/src/: ignBufferImage.cpp  ignColorTable.cpp  ignGDALImageDriver.cpp  ignImage.cpp  ignImageAddChannels.cpp  ignImageCache.cpp  ignImageDeriche.cpp  ignImageDriver.cpp  ignImageDriverManager.cpp  ignImageEntropy.cpp  ignImageIO.cpp  ignImageInput.cpp  ignImageNumRegion.cpp  ignImageOutput.cpp  ignImageSystemRadio.cpp  ignImageType.cpp  ignImageWatershed.cpp  ignMPDImageDriver.cpp  ignMultiImage.cpp  ignProjectionList.cpp
src/ign/numeric/: CMakeLists.txt
src/ign/numeric/include/: ignMathBoxNT.h  ignMathFixedSizeArray.h  ignMathInterval.h  ignMathVector2T.h  ignMathVector3T.h  ignMathVectorBaseT.h  ignMathVectorT.h  ignNumeric.h  ignNumericIsNullImpl.h  ignNumericSysUnit.h  ignNumericTypes.h  ignNumericUnit.h  ignUblas.h
src/ign/numeric/src/: ignNumeric.cpp  ignNumericSysUnit.cpp  ignNumericTypes.cpp
src/ign/transform/: CMakeLists.txt
src/ign/transform/include/: ignTransform.h  ignTransformSystem.h  ignTransformVector.h
src/ign/transform/src/: ignTransform.cpp  ignTransformSystem.cpp  ignTransformVector.cpp
src/lgl/: CMakeLists.txt
src/lgl/include/lgl/: lgl.h  lglAnalyzeHeader.h  lglArray.h  lglArray2D.h  lglBitManager.h  lglBitManager_code.h  lglCollection.h  lglFunction.h  lglGeneral.h  lglGraph.h  lglGraph_code.h  lglImage.h  lglImageBasicAlgorithms.h  lglImageBasicAlgorithms_code.h  lglImageIO.h  lglImageManip.h  lglImageManip_code.h  lglImageRam.h  lglImageRam_code.h  lglIndexedHeap.h  lglIndexedHeap_code.h  lglInterPixelBoundaryTracker.h  lglLabelImageToGraph.h  lglLabelImageToGraph_code.h  lglMachine.h  lglMatrix.h  lglMatrix_code.h  lglNeighborhood.h  lglNoyau.h  lglNoyau_code.h  lglPalette.h  lglPixelGraph.h  lglPoint2D.h  lglPoint4D.h  lglRandom.h  lglSparseArray.h  lglSparseArray_code.h  lglString.h  lglType.h  lglVector.h  (+2 more)
src/lgl/src/: lglAnalyzeHeader.cpp  lglGeneral.cpp  lglImageIO.cpp  lglImageManip.cpp  lglInterPixelBoundaryTracker.cpp  lglNeighborhood.cpp  lglPalette.cpp  lglRandom.cpp  lglType.cpp
src/pyram/: CMakeLists.txt  exception.h  pyram.cpp  pyram.h  pyram_code.h
src/sxs/: CMakeLists.txt
src/sxs/include/sxs/: macroSortieMessage.h  macroType.h  sxsC_BoundaryMeasure.h  sxsC_Constant.h  sxsC_PolygonalBoundary.h  sxsC_PolygonalBoundaryMeasures.h  sxsD_Covariance.h  sxsD_ImageCovariance.h  sxsE_MumfordShah.h  sxsE_PolygonalBoundaryImageCovariance.h  sxsE_PureImageCovariance.h  sxsGeneral.h  sxsImageScaleClimbing.h  sxsImageScaleClimbingUser.h  sxsImageScaleSets.h  sxsN_Verbose_User.h  sxsPiecewiseAffineFunction.h  sxsScaleClimbing.h  sxsScaleClimbingGraph.h  sxsScaleClimbingUser.h  sxsScaleSets.h  sxsVersion.h
src/sxs/src/: sxsC_PolygonalBoundary.cpp  sxsC_PolygonalBoundaryMeasures.cpp  sxsImageScaleClimbing.cpp  sxsImageScaleClimbingUser.cpp  sxsImageScaleSets.cpp  sxsPiecewiseAffineFunction.cpp  sxsScaleClimbing.cpp  sxsScaleSets.cpp
